--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,21 +17,21 @@
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">ニックネーム</label>
-      <span class="indispensable">必須</span>
+      <span class="register-red-btn">必須</span>
     </div>
     <%= f.text_area :name, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40" %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">メールアドレス</label>
-      <span class="indispensable">必須</span>
+      <span class="register-red-btn">必須</span>
     </div>
     <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">パスワード</label>
-      <span class="indispensable">必須</span>
+      <span class="register-red-btn">必須</span>
     </div>
     <%= f.password_field :password, class:"input-default", id:"password", placeholder:"6文字以上の半角英数字" %>
     <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
@@ -39,7 +39,7 @@
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">パスワード(確認)</label>
-      <span class="indispensable">必須</span>
+      <span class="register-red-btn">必須</span>
     </div>
     <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
   </div>
@@ -54,7 +54,7 @@
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">お名前(全角)</label>
-      <span class="indispensable">必須</span>
+      <span class="register-red-btn">必須</span>
     </div>
     <div class='input-name-wrap'>
       <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
@@ -64,7 +64,7 @@
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">お名前カナ(全角)</label>
-      <span class="indispensable">必須</span>
+      <span class="register-red-btn">必須</span>
     </div>
     <div class='input-name-wrap'>
       <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
@@ -74,7 +74,7 @@
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">生年月日</label>
-      <span class="indispensable">必須</span>
+      <span class="register-red-btn">必須</span>
     </div>
     <div class='input-birth-wrap'>
       <%= raw sprintf(
