--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,6 +17,7 @@
     <ul class='lists-right'>
       <% if user_signed_in? %>
           <div class="user_nav grid-6">
+            <%= link_to current_user.name, class: "user-name" %>
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
           </div>
         <% else %>
