--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -136,9 +136,11 @@
                 <%= image_tag item.image.variant(resize: '250x250'), class: "imege" if item.image.attached? %>
 
                 
-                <%# div class='sold-out'> 
+                <% if item.record != nil %>
+                  <div class='sold-out'>
                   <span>Sold Out!!</span>
-                <%# //div %>
+                  </div>
+                <% end %> 
 
               </div>
               <div class='item-info'>
