--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,16 +25,19 @@
       </span>
     </div>
 
-    <% if user_signed_in? %> 
     
-      <% if current_user.id == @item.user_id && @item.record.nil? %> 
-        <%= link_to '商品の編集', edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
-        <p class='or-text'>or</p>
-        <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
-        <%= link_to '購入画面に進む', item_orders_path(@item.id), class:"item-red-btn"%>
-      <% end %>
+  <% if user_signed_in? %> 
+    
+    <% if current_user.id == @item.user_id && @item.record.nil? %> 
+      <%= link_to '商品の編集', edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
+      <p class='or-text'>or</p>
+      <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
+    
+    <% elsif @item.record.present? %>
+    <% else %>
+     <%= link_to '購入画面に進む', item_orders_path(@item.id), class:"item-red-btn"%>
     <% end %>
-
+  <% end %>
 
     <div class="item-explain-box">
       <span><%= @item.item_information %></span>
